--- a/src/Marten/project.json
+++ b/src/Marten/project.json
@@ -1,13 +1,20 @@
-﻿{
+{
   "version": "1.0.0-*",
   "description": "Marten Class Library",
-  "authors": [ "jeremill" ],
-  "tags": [ "" ],
+  "authors": [
+    "jeremill"
+  ],
+  "tags": [
+    ""
+  ],
   "projectUrl": "",
   "licenseUrl": "",
-
   "frameworks": {
-    "dnx451": { },
+    "dnx451": {
+      "dependencies": {
+        "Npgsql": "3.1.0-alpha1"
+      }
+    },
     "dnxcore50": {
       "dependencies": {
         "Microsoft.CSharp": "4.0.1-beta-23225",
@@ -17,5 +24,8 @@
         "System.Threading": "4.0.11-beta-23225"
       }
     }
+  },
+  "dependencies": {
+    
   }
 }
