--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Generation\TemplateReadingTests.cs" />
     <Compile Include="PlayingTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Schema\DevelopmentDocumentSchemaTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Marten\Marten.csproj">
