can persist and load a single document at a time

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -48,6 +48,10 @@
     <Compile Include="ISerializer.cs" />
     <Compile Include="JsonNetSerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Schema\DevelopmentDocumentSchema.cs" />
+    <Compile Include="Schema\DocumentStorage.cs" />
+    <Compile Include="Schema\IDocumentSchema.cs" />
+    <Compile Include="Schema\IDocumentStorage.cs" />
     <Compile Include="Schema\SchemaClasses.cs" />
   </ItemGroup>
   <ItemGroup>
