--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -44,9 +44,11 @@
     </Compile>
     <Compile Include="ConnectionSource.cs" />
     <Compile Include="DevelopmentModeRegistry.cs" />
+    <Compile Include="DocumentSessionFixture.cs" />
     <Compile Include="Documents\Company.cs" />
     <Compile Include="Documents\Issue.cs" />
     <Compile Include="Documents\User.cs" />
+    <Compile Include="document_session_delete_a_single_document_Tests.cs" />
     <Compile Include="document_session_persist_and_load_single_documents.cs" />
     <Compile Include="Generation\SchemaBuilderTests.cs" />
     <Compile Include="Generation\TemplateReadingTests.cs" />
