ST harness and one passing test for querying by integer

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Schema\IDocumentStorage.cs" />
     <Compile Include="Schema\SchemaClasses.cs" />
     <Compile Include="Util\CommandExtensions.cs" />
+    <Compile Include="Util\MemberInfoExtensions.cs" />
     <Compile Include="Util\StringExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
