--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Schema\DevelopmentDocumentSchema.cs" />
     <Compile Include="Schema\DocumentStorage.cs" />
+    <Compile Include="Schema\DocumentStorageBuilder.cs" />
     <Compile Include="Schema\IDocumentSchema.cs" />
     <Compile Include="Schema\IDocumentStorage.cs" />
     <Compile Include="Schema\SchemaClasses.cs" />
