--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Linq\MartenQueryable.cs" />
     <Compile Include="Linq\MartenQueryParser.cs" />
     <Compile Include="Linq\MartenExpressionParser.cs" />
+    <Compile Include="Linq\MartenQueryExecutor.cs" />
     <Compile Include="Linq\WhereFragment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Schema\DevelopmentDocumentSchema.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="Schema\IDocumentSchema.cs" />
     <Compile Include="Schema\IDocumentStorage.cs" />
     <Compile Include="Schema\SchemaClasses.cs" />
+    <Compile Include="SerializerExtensions.cs" />
     <Compile Include="TypeMappings.cs" />
     <Compile Include="Util\CommandExtensions.cs" />
     <Compile Include="Util\MemberInfoExtensions.cs" />
