--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -70,6 +70,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Linq\MartenExpressionParserTests.cs" />
+    <Compile Include="Linq\query_against_dateoffset_Tests.cs" />
     <Compile Include="Linq\query_with_enums_Tests.cs" />
     <Compile Include="Linq\using_multiple_where_clauses_Tests.cs" />
     <Compile Include="persisting_document_with_string_id_Tests.cs" />
