--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Linq\WhereFragment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Schema\DevelopmentSchemaCreation.cs" />
+    <Compile Include="Schema\DocumentMapping.cs" />
     <Compile Include="Schema\DocumentSchema.cs" />
     <Compile Include="Schema\DocumentStorage.cs" />
     <Compile Include="Schema\DocumentStorageBuilder.cs" />
