--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -75,10 +75,10 @@
     <Compile Include="Schema\ProductionSchemaCreation.cs" />
     <Compile Include="SerializerExtensions.cs" />
     <Compile Include="TypeMappings.cs" />
-    <Compile Include="Util\AssemblyGenerator.cs" />
+    <Compile Include="Codegen\AssemblyGenerator.cs" />
     <Compile Include="Util\CommandExtensions.cs" />
     <Compile Include="Util\MemberInfoExtensions.cs" />
-    <Compile Include="Util\SourceWriter.cs" />
+    <Compile Include="Codegen\SourceWriter.cs" />
     <Compile Include="Util\StringExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
