first end to end test of duplicated field data

--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Documents\User.cs" />
     <Compile Include="document_session_delete_a_single_document_Tests.cs" />
     <Compile Include="document_session_persist_and_load_single_documents_Tests.cs" />
+    <Compile Include="duplicate_fields_in_table_and_upsert_Tests.cs" />
     <Compile Include="Fixtures\LinqFixture.cs" />
     <Compile Include="Fixtures\OrderingFixture.cs" />
     <Compile Include="Fixtures\ResultSet.cs" />
