--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -71,6 +71,9 @@
     <Compile Include="Schema\IDocumentSchemaCreation.cs" />
     <Compile Include="Schema\IDocumentStorage.cs" />
     <Compile Include="Schema\DocumentCleaner.cs" />
+    <Compile Include="Schema\IField.cs" />
+    <Compile Include="Schema\JsonLocatorField.cs" />
+    <Compile Include="Schema\LateralJoinField.cs" />
     <Compile Include="Schema\ProductionSchemaCreation.cs" />
     <Compile Include="SerializerExtensions.cs" />
     <Compile Include="TypeMappings.cs" />
