--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -76,8 +76,10 @@
     <Compile Include="Schema\IField.cs" />
     <Compile Include="Schema\JsonLocatorField.cs" />
     <Compile Include="Schema\LateralJoinField.cs" />
+    <Compile Include="Schema\MartenAttribute.cs" />
     <Compile Include="Schema\ProductionSchemaCreation.cs" />
     <Compile Include="Schema\PropertySearching.cs" />
+    <Compile Include="Schema\SearchableAttribute.cs" />
     <Compile Include="Schema\UpsertArgument.cs" />
     <Compile Include="SerializerExtensions.cs" />
     <Compile Include="TypeMappings.cs" />
