--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Linq\MartenExpressionParser.cs" />
     <Compile Include="Linq\MartenQueryExecutor.cs" />
     <Compile Include="Linq\WhereFragment.cs" />
+    <Compile Include="MartenRegistry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Schema\DevelopmentSchemaCreation.cs" />
     <Compile Include="Schema\DocumentMapping.cs" />
