--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Schema\PropertySearchingAttribute.cs" />
     <Compile Include="Schema\SchemaBuilder.cs" />
     <Compile Include="Schema\SearchableAttribute.cs" />
+    <Compile Include="Schema\Sequences\SequenceClasses.cs" />
     <Compile Include="Schema\UpsertArgument.cs" />
     <Compile Include="SerializerExtensions.cs" />
     <Compile Include="TypeMappings.cs" />
