--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Schema\LateralJoinFieldTests.cs" />
     <Compile Include="Schema\ProductionModeSchemeCreationTests.cs" />
     <Compile Include="Schema\SchemaBuilderTests.cs" />
+    <Compile Include="Schema\Sequences\HiLoIdGenerationTests.cs" />
     <Compile Include="Schema\Sequences\HiLoSequenceTests.cs" />
     <Compile Include="Schema\Sequences\SequenceFactoryTests.cs" />
     <Compile Include="SpecificationExtensions.cs" />
